--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "s3Url": "https://s3.amazonaws.com/spicedling/",
+    "s3Url": "https://s3.amazonaws.com/ofir-imageboard/",
     "user": "ofirkatz",
     "password": "1234567"
 }
